﻿7/2/2015 0.8.10.6
  Fixes #203: Crystallized Essentia & Wisp Essence can now be used to set filters.
  Fixes #206: Import bus will no longer crash with redstone card.
  
6/12/2016 0.8.10.6
  Fixes #199: Conversion & Storage monitors now placeable in SMP.
  EssentiaGrid:
  * Updated Conversion Monitor
  * Updated Import & Export buses
  * Updated Essentia Cell
  * Updated Wireless Terminal
  * Updated Level Emitter
  * Updated Storage Monitor
  Refactored a great deal of code surrounding essentia transfers and power usage.
  Cleaned up redundancies in the wireless terminal code.
  Reduced gearbox bounding/collision box.

5/30/2015 0.8.10.6
  More CC work #194

5/29/2015 0.8.10.6
  Fixes #197: Arcane Assembler no longer eats armor on shift-click.
  Fixes #196: Arcane Assembler requires Sceptre research.

5/28/2015 0.8.10.6
  Major under-the-hood changes to how devices interact with the network are underway.
  Bugfix: Potential situation where the Essentia Provider would stop accepting essentia.
  More CC work.

5/27/2015 0.8.10.6
  Fixes #195: Shift+Rightclick in the ACT continues to extract 1 item at a time.
  Added some support for ComputerCraft #194

5/25/2015 0.8.10.6
  Potential bugfix: Improper array bounds checking.
  Potential bugfix: ACT view slots are checked for being null before usage.

5/25/2015 0.8.10.5
  Fixes #135: Adds support for shift-clicking arcane recipes if ThaumicNEIPlugin is installed.

5/25/2015 0.8.10.4
  Fixes #191: Features should never be null.

5/23/2015 0.8.10.3
  Bugfix: Feature dependencies resetting to false.
  Bugfix: Wrench focus calculation errors fixed.

5/22/2015 0.8.10.3
  More API changes.
  Added safety layer to API ensuring it can not be accessed before it is ready.
  Added scanning aspects for:
  * Encoded Pattern
  * Singularities
  * EU & RF P2P Tunnels
  Fixes #188: Crafting result is now updated on both client and server if wand vis levels change.